[package]
name = "base64-string-rs"
version = "0.0.1"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
num-bigint = "0.3.1"
anyhow = "1.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"